<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tr_es.dict.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_home_to_flashcards"
            app:destination="@id/flashcardsFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.tr_es.dict.ui.search.SearchFragment"
        android:label="@string/nav_dictionary"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/flashcardsFragment"
        android:name="com.tr_es.dict.ui.flashcards.FlashcardsFragment"
        android:label="@string/nav_cards"
        tools:layout="@layout/fragment_flashcards" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.tr_es.dict.ui.favorites.FavoritesFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/wordDetailFragment"
        android:name="com.tr_es.dict.ui.detail.WordDetailFragment"
        android:label="@string/title_word_detail"
        tools:layout="@layout/fragment_word_detail">
        <argument
            android:name="wordId"
            app:argType="long" />
    </fragment>

    <action
        android:id="@+id/action_global_wordDetail"
        app:destination="@id/wordDetailFragment" />

</navigation>
